[project]
name = "indicator-tokenizer"
version = "0.1.0"
description = "Technical indicator computation and tokenization for trading models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
