[project]
name = "late-fusion-agent"
version = "0.1.0"
description = "Late fusion trading agent combining candle and indicator models"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
]
[project.optional-dependencies]
dev = ["pytest>=8.0"]
[tool.pytest.ini_options]
testpaths = ["tests"]
