[project]
name = "orderbook-encoder"
version = "0.1.0"
description = "L2 order book MLP encoder: warehouse data -> book reconstruction -> embeddings"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
