[project]
name = "token-first-transformer"
version = "0.1.0"
description = "Token-based transformer trading agent"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "pyarrow>=15.0",
    "polars>=0.20",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
